# sorting-algorithms

./: CMakeLists.txt  README.md
assets/: 10000_sorted.txt  10000_unsorted.txt  100_unsorted.txt  10_unsorted.txt  50_unsorted.txt
includes/: colors.hpp
src/: algorithmSetup.cpp  main.cpp  utils.cpp
src/algorithms/: bubbleSort.cpp  insertionSort.cpp  mergeSort.cpp  selectionSort.cpp
src/graphical/: window.cpp
